<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_setting">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_background"
        android:padding="@dimen/detail_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_padding"
                android:background="@color/colorDetail"
                android:drawableLeft="@drawable/language"
                android:drawablePadding="@dimen/detail_padding"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/detail_padding"
                android:scrollbars="horizontal"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/number_wolf_bite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_padding"
                android:background="@color/colorDetail"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="@dimen/detail_padding"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/detail_padding"
                android:scrollbars="horizontal"
                android:text="@string/number_wolf_bite"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/number_security_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_padding"
                android:background="@color/colorDetail"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="@dimen/detail_padding"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/detail_padding"
                android:scrollbars="horizontal"
                android:text="@string/number_security_help"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/number_witch_poison"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_padding"
                android:background="@color/colorDetail"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="@dimen/detail_padding"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/detail_padding"
                android:scrollbars="horizontal"
                android:text="@string/number_witch_poison"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/number_witch_assist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_padding"
                android:background="@color/colorDetail"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="@dimen/detail_padding"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/detail_padding"
                android:scrollbars="horizontal"
                android:text="@string/number_witch_assist"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/number_hunter_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_padding"
                android:background="@color/colorDetail"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="@dimen/detail_padding"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/detail_padding"
                android:scrollbars="horizontal"
                android:text="@string/number_hunter_select"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/number_hanged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_padding"
                android:background="@color/colorDetail"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="@dimen/detail_padding"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/detail_padding"
                android:scrollbars="horizontal"
                android:text="@string/number_hanged"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/number_grandmother_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_padding"
                android:background="@color/colorDetail"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="@dimen/detail_padding"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/detail_padding"
                android:scrollbars="horizontal"
                android:text="@string/number_grandmother_select"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/tv_timer_discuss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_padding"
                android:background="@color/colorDetail"
                android:drawableLeft="@drawable/ic_setting"
                android:drawablePadding="@dimen/detail_padding"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/detail_padding"
                android:scrollbars="horizontal"
                android:text="@string/timer_discuss"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>