<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background">

    <TextView
        android:id="@+id/tv_discuss_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/detail_padding"
        android:gravity="center"
        android:text="@string/btn_shuffle_text_done"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_button"
        android:text="@string/btn_discuss_text"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_next"
        android:layout_below="@+id/tv_discuss_comment"
        android:background="@android:color/transparent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_numner_dead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/detail_padding"
                android:gravity="center"
                android:text="@string/btn_shuffle_text_done"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorDetail"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_countdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/detail_padding"
                    android:gravity="center"
                    android:text="@string/tv_create_timer"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_title_function"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/detail_padding"
                    android:gravity="center"
                    android:text="@string/tv_select_player_die"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_player_dead"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/detail_padding"
                android:background="@color/colorDetail" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>